@@ -118,6 +118,13 @@ has authority => (
     },
 );
 
+has fake_release => (
+    is => 'ro', isa => 'Bool',
+    init_arg => undef,
+    lazy => 1,
+    default => sub { $ENV{FAKE_RELEASE} || $_[0]->payload->{fake_release} // 0 },
+);
+
 # configs are applied when plugins match ->isa($key) or ->does($key)
 my %extra_args = (
     'Dist::Zilla::Plugin::MakeMaker' => { 'eumm_version' => '0' },
@@ -339,7 +346,9 @@ sub configure
         # (ConfirmRelease)
 
         # Releaser
-        'UploadToCPAN',
+        $self->fake_release
+            ? do { warn '[@Author::ETHER] ', colored('FAKE_RELEASE set - not uploading to CPAN', 'yellow'), "\n"; 'FakeRelease' }
+            : 'UploadToCPAN',
 
         # After Release
         ( $self->licence eq 'LICENSE' && -e 'LICENCE' ?
@@ -971,6 +980,14 @@ authority over the distribution and main module namespace. If not provided, it i
 passed through to the <[Authority]|Dist::Zilla::Plugin::Authority> plugin, and finally defaults to C<cpan:ETHER>.
 It is presently used for setting C<x_authority> metadata and deciding which spelling is used for the F<LICENCE>
 file (if the C<licence> configuration is not provided).
+
+=head2 fake_release
+
+Available since 0.122.
+
+A boolean option, that when set, removes <[UploadToCPAN]|Dist::Zilla::Plugin::UploadToCPAN> from the plugin list
+and replaces it with <[FakeRelease]|Dist::Zilla::Plugin::FakeRelease>.
+Defaults to false; can also be set with the environment variable C<FAKE_RELEASE>.
 
 =for stopwords customizations
 
